--- a/QLGiaoVien/QLGiaoVien/QLGiaoVien.csproj
+++ b/QLGiaoVien/QLGiaoVien/QLGiaoVien.csproj
@@ -45,10 +45,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -126,11 +134,55 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\GiaoVienController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Repository\DBConnectionBase.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BoMon.cs" />
+    <Compile Include="Models\ChucDanhChuyenMon.cs" />
+    <Compile Include="Models\ChucVu.cs" />
+    <Compile Include="Models\ChungChiNgoaiNgu.cs" />
+    <Compile Include="Models\DaoTaoDaiHoc.cs" />
+    <Compile Include="Models\DeTaiNghienCuuKHCN.cs" />
+    <Compile Include="Models\DinhMucChucVu.cs" />
+    <Compile Include="Models\DinhMucGiangDay.cs" />
+    <Compile Include="Models\DinhMucNghienCuu.cs" />
+    <Compile Include="Models\DonViChinh.cs" />
+    <Compile Include="Models\GiangDay.cs" />
+    <Compile Include="Models\GiaoVien.cs" />
+    <Compile Include="Models\GiaoVien_ChucDanhChuyenMon.cs" />
+    <Compile Include="Models\GiaoVien_ChucVu.cs" />
+    <Compile Include="Models\GiaoVien_ChungChiNgoaiNgu.cs" />
+    <Compile Include="Models\GiaoVien_DeTaiNghienCuuKHCN.cs" />
+    <Compile Include="Models\GiaoVien_GiangDay.cs" />
+    <Compile Include="Models\GiaoVien_HocHamHocVi.cs" />
+    <Compile Include="Models\GiaoVien_HoiDong.cs" />
+    <Compile Include="Models\GiaoVien_HuongDan.cs" />
+    <Compile Include="Models\GiaoVien_HuongNghienCuu.cs" />
+    <Compile Include="Models\GiaoVien_KhaoThi.cs" />
+    <Compile Include="Models\HeGiangDay.cs" />
+    <Compile Include="Models\HeHuongDan.cs" />
+    <Compile Include="Models\HocHamHocVi.cs" />
+    <Compile Include="Models\HoiDong.cs" />
+    <Compile Include="Models\HuongDan.cs" />
+    <Compile Include="Models\HuongNghienCuuChinh.cs" />
+    <Compile Include="Models\KhaoThi.cs" />
+    <Compile Include="Models\KhenThuong.cs" />
+    <Compile Include="Models\KyLuat.cs" />
+    <Compile Include="Models\LoaiHoiDong.cs" />
+    <Compile Include="Models\LoaiHuongDan.cs" />
+    <Compile Include="Models\LoaiKhaoThi.cs" />
+    <Compile Include="Models\LoaiNCKH.cs" />
+    <Compile Include="Models\LoaiSiSo.cs" />
+    <Compile Include="Models\NamHoc.cs" />
+    <Compile Include="Models\NhomGiangDay.cs" />
+    <Compile Include="Models\NhomNCKH.cs" />
+    <Compile Include="Models\ThamSoDinhMucChucVu.cs" />
+    <Compile Include="Models\VaiTro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\GiaoVienRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -1767,8 +1819,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="vendor\bootstrap\js\bootstrap.bundle.js.map" />
     <Content Include="vendor\bootstrap\js\bootstrap.bundle.min.js.map" />
@@ -1914,10 +1964,10 @@
     <Content Include="vendor\fontawesome-free\webfonts\fa-solid-900.woff2" />
     <Content Include="vendor\jquery\jquery.min.map" />
     <Content Include="vendor\jquery\jquery.slim.min.map" />
+    <Content Include="Views\GiaoVien\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
