--- a/QLGiaoVien/QLGiaoVien/Web.config
+++ b/QLGiaoVien/QLGiaoVien/Web.config
@@ -11,7 +11,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-  <add name="ConnectionStrings" connectionString="data source=DESKTOP-LCCHOFC\SQLEXPRESS1;initial catalog=dbQLGiaoVien;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+  <!--<add name="ConnectionStrings" connectionString="data source=DESKTOP-LCCHOFC\SQLEXPRESS1;initial catalog=dbQLGiaoVien;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>-->
+  <add name="ConnectionStrings" connectionString="Data Source=DESKTOP-OPV0EUN;Initial Catalog=dbQLGiaoVien;User Id=sa;Password=123456" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
