--- a/QLGiaoVien/BusinessLogic/BusinessLogic.csproj
+++ b/QLGiaoVien/BusinessLogic/BusinessLogic.csproj
@@ -39,8 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HuongDanBL.cs" />
+    <Compile Include="GuideBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResearchBL.cs" />
     <Compile Include="SearchInfoBL.cs" />
   </ItemGroup>
   <ItemGroup>
