--- a/QLGiaoVien/BusinessLogic/BusinessLogic.csproj
+++ b/QLGiaoVien/BusinessLogic/BusinessLogic.csproj
@@ -42,7 +42,7 @@
     <Compile Include="GuideBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResearchBL.cs" />
-    <Compile Include="SearchInfoBL.cs" />
+    <Compile Include="ConfigurationBL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAO\DAO.csproj">
