--- a/QLGiaoVien/Utils/Utils.csproj
+++ b/QLGiaoVien/Utils/Utils.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AjaxResultModel.cs" />
     <Compile Include="ConvertData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
