--- a/QLGiaoVien/QLGiaoVien/Web.config
+++ b/QLGiaoVien/QLGiaoVien/Web.config
@@ -12,7 +12,7 @@
   </appSettings>
   <connectionStrings>
   <!--<add name="ConnectionStrings" connectionString="data source=DESKTOP-LCCHOFC\SQLEXPRESS1;initial catalog=dbQLGiaoVien;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>-->
-  <add name="ConnectionStrings" connectionString="Data Source=DESKTOP-OPV0EUN;Initial Catalog=dbQLGiaoVien;User Id=sa;Password=123456" providerName="System.Data.SqlClient" />
+  <add name="ConnectionStrings" connectionString="Data Source=DESKTOP-GM78NCF;Initial Catalog=dbQLGiaoVien;User Id=sa;Password=123456" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web>
