--- a/QLGiaoVien/QLGiaoVien/QLGiaoVien.csproj
+++ b/QLGiaoVien/QLGiaoVien/QLGiaoVien.csproj
@@ -136,6 +136,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\GiaoVienController.cs" />
+    <Compile Include="Controllers\HoiDongController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HuongDanController.cs" />
     <Compile Include="Controllers\KhaoThiController.cs" />
@@ -1978,6 +1979,8 @@
     <Content Include="Views\NghienCuu\_DanhSach.cshtml" />
     <Content Include="Views\KhaoThi\Index.cshtml" />
     <Content Include="Views\KhaoThi\_DanhSachKhaoThi.cshtml" />
+    <Content Include="Views\HoiDong\Index.cshtml" />
+    <Content Include="Views\HoiDong\_DanhSachHoiDong.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
