--- a/QLGiaoVien/BusinessLogic/BusinessLogic.csproj
+++ b/QLGiaoVien/BusinessLogic/BusinessLogic.csproj
@@ -39,10 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DepartmentBL.cs" />
     <Compile Include="GuideBL.cs" />
+    <Compile Include="LecturerBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResearchBL.cs" />
     <Compile Include="SearchInfoBL.cs" />
+    <Compile Include="TeachBL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAO\DAO.csproj">
