--- a/QLGiaoVien/DAO/DAO.csproj
+++ b/QLGiaoVien/DAO/DAO.csproj
@@ -40,14 +40,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassSizeDAO.cs" />
+    <Compile Include="Department_DAO.cs" />
+    <Compile Include="GroupTeachDAO.cs" />
     <Compile Include="GuideProc.cs" />
     <Compile Include="GuideView.cs" />
     <Compile Include="GuideDAOForList.cs" />
+    <Compile Include="HeGiangDayDAO.cs" />
     <Compile Include="LecturerDAO.cs" />
+    <Compile Include="Lecturer_DAO1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResearchDaoForList.cs" />
     <Compile Include="ResearchProc.cs" />
     <Compile Include="ResearchView.cs" />
+    <Compile Include="TeachTableView.cs" />
+    <Compile Include="Teach_DAO.cs" />
     <Compile Include="YearDAO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
