--- a/QLGiaoVien/QLGiaoVien/QLGiaoVien.csproj
+++ b/QLGiaoVien/QLGiaoVien/QLGiaoVien.csproj
@@ -135,57 +135,18 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\GiangDayController.cs" />
     <Compile Include="Controllers\GiaoVienController.cs" />
+    <Compile Include="Controllers\HeGiangDayController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HuongDanController.cs" />
     <Compile Include="Controllers\NghienCuuController.cs" />
-    <Compile Include="Repository\DBConnectionBase.cs" />
+    <Compile Include="Controllers\LoaiSiSoController.cs" />
+    <Compile Include="ExtendModel\ComboBoxOptions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\BoMon.cs" />
-    <Compile Include="Models\ChucDanhChuyenMon.cs" />
-    <Compile Include="Models\ChucVu.cs" />
-    <Compile Include="Models\ChungChiNgoaiNgu.cs" />
-    <Compile Include="Models\DaoTaoDaiHoc.cs" />
-    <Compile Include="Models\DeTaiNghienCuuKHCN.cs" />
-    <Compile Include="Models\DinhMucChucVu.cs" />
-    <Compile Include="Models\DinhMucGiangDay.cs" />
-    <Compile Include="Models\DinhMucNghienCuu.cs" />
-    <Compile Include="Models\DonViChinh.cs" />
-    <Compile Include="Models\GiangDay.cs" />
-    <Compile Include="Models\GiaoVien.cs" />
-    <Compile Include="Models\GiaoVien_ChucDanhChuyenMon.cs" />
-    <Compile Include="Models\GiaoVien_ChucVu.cs" />
-    <Compile Include="Models\GiaoVien_ChungChiNgoaiNgu.cs" />
-    <Compile Include="Models\GiaoVien_DeTaiNghienCuuKHCN.cs" />
-    <Compile Include="Models\GiaoVien_GiangDay.cs" />
-    <Compile Include="Models\GiaoVien_HocHamHocVi.cs" />
-    <Compile Include="Models\GiaoVien_HoiDong.cs" />
-    <Compile Include="Models\GiaoVien_HuongDan.cs" />
-    <Compile Include="Models\GiaoVien_HuongNghienCuu.cs" />
-    <Compile Include="Models\GiaoVien_KhaoThi.cs" />
-    <Compile Include="Models\HeGiangDay.cs" />
-    <Compile Include="Models\HeHuongDan.cs" />
-    <Compile Include="Models\HocHamHocVi.cs" />
-    <Compile Include="Models\HoiDong.cs" />
-    <Compile Include="Models\HuongDan.cs" />
-    <Compile Include="Models\HuongNghienCuuChinh.cs" />
-    <Compile Include="Models\KhaoThi.cs" />
-    <Compile Include="Models\KhenThuong.cs" />
-    <Compile Include="Models\KyLuat.cs" />
-    <Compile Include="Models\LoaiHoiDong.cs" />
-    <Compile Include="Models\LoaiHuongDan.cs" />
-    <Compile Include="Models\LoaiKhaoThi.cs" />
-    <Compile Include="Models\LoaiNCKH.cs" />
-    <Compile Include="Models\LoaiSiSo.cs" />
-    <Compile Include="Models\NamHoc.cs" />
-    <Compile Include="Models\NhomGiangDay.cs" />
-    <Compile Include="Models\NhomNCKH.cs" />
-    <Compile Include="Models\ThamSoDinhMucChucVu.cs" />
-    <Compile Include="Models\VaiTro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\GiaoVienRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -1975,6 +1936,11 @@
     <Content Include="Views\NghienCuu\Index.cshtml" />
     <Content Include="Views\HuongDan\_DanhSach.cshtml" />
     <Content Include="Views\NghienCuu\_DanhSach.cshtml" />
+    <Content Include="Views\GiangDay\DataGrid.cshtml" />
+    <Content Include="Views\GiangDay\Index.cshtml" />
+    <Content Include="Views\GiaoVien\Create.cshtml" />
+    <Content Include="Views\LoaiSiSo\Index.cshtml" />
+    <Content Include="Views\HeGiangDay\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
